--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/npm": "^7.19.3",
     "@types/react": "~18.2.79",
     "expo": "~51.0.28",
+    "expo-av": "^14.0.7",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -20,6 +21,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.5.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
